rholang-tree-sitter/test/corpus/replicated_send.txt
================
Replicated send
================

new HelloWorld, stdout(`rho:io:stdout`), stderr(`rho:io:stderr`) in {
  HelloWorld!!("Hello, world!") |
  for (@text <- HelloWorld) {
    stdout!(text)
  } |
  for (@text <- HelloWorld) {
    stderr!(text)
  }
}

---

(source_file
  (new
    decls: (name_decls
      (name_decl
        (var))
      (name_decl
        (var)
        uri: (uri_literal))
      (name_decl
        (var)
        uri: (uri_literal)))
    proc: (block
      (par
        (par
          (send
            channel: (var)
            send_type: (send_multiple)
            inputs: (inputs
              (string_literal)))
          (input
            receipts: (receipts
              (receipt
                (linear_bind
                  names: (names
                    (quote
                      (var)))
                  input: (simple_source
                    (var)))))
            proc: (block
              (send
                channel: (var)
                send_type: (send_single)
                inputs: (inputs
                  (var))))))
        (input
          receipts: (receipts
            (receipt
              (linear_bind
                names: (names
                  (quote
                    (var)))
                input: (simple_source
                  (var)))))
          proc: (block
            (send
              channel: (var)
              send_type: (send_single)
              inputs: (inputs
                (var)))))))))
